<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sathishbabur.kamazhi_accounting.AddExpenseActivity"
    android:scrollbarAlwaysDrawVerticalTrack="false">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:weightSum="1"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:clickable="true"
            android:text="@string/add_expense"
            android:textSize="30sp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="3"
            android:rowCount="11"

           >
            //Category

            <TextView
                android:layout_column="0"
                android:layout_row="0"
                android:padding="8dp"
                android:text="@string/category"
                android:textSize="20sp"
                ></TextView>

            <TextView
                android:id="@+id/txtCategory"
                android:layout_column="2"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="8dp"
                android:layout_row="0"
                android:text="@string/app_name"
                tools:clickable="true"
                android:onClick="getCategory"
                android:textSize="20sp"
                />

            //Amount

            <TextView
                android:layout_column="0"
                android:layout_row="2"
                android:padding="8dp"
                android:text="@string/Amount"
                android:textSize="20sp"
                ></TextView>

            <TextView
                android:id="@+id/txtAmount"
                android:layout_column="2"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="8dp"
                android:layout_row="2"
                android:text="0.00"
                android:textSize="20sp"
                android:onClick="getAmount"
                />

            //Date

            <TextView
                android:layout_column="0"
                android:layout_row="4"
                android:padding="8dp"
                android:text="@string/Data"
                android:textSize="20sp"
                ></TextView>

            <TextView
                android:id="@+id/txtDate"
                android:layout_column="2"
                android:layout_row="4"
                android:text="23-Aug-2017"
                android:textSize="20sp"
                android:onClick="getDate"
                />

            //Comments

            <TextView
                android:layout_column="0"
                android:layout_row="5"
                android:padding="8dp"
                android:text="@string/Comments"
                android:textSize="20sp"
                ></TextView>

            <TextView
                android:id="@+id/txtComments"
                android:layout_column="0"
                android:layout_columnSpan="3"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="8dp"
                android:layout_row="6"
                android:layout_rowSpan="2"
                android:text="comments"
                android:layout_width="277dp"
                android:layout_height="101dp"
                android:ems="10"
                android:textSize="20sp"
                android:onClick="getComments"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_expense"
                android:layout_column="2"

                />
        </GridLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
